--- a/client/client.css
+++ b/client/client.css
@@ -12,7 +12,7 @@ body {
 }
 
 #cr-stage {
-  border: 2px solid black; 
-  margin: 5px auto; 
-  background-color: white;
+  border: 2px solid white;
+  margin: 5px auto;
+  background-color: black;
 }
